# workbooks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  security-test.mjs
.github/workflows/: runtime-wasm-size.yml  site-deploy.yml  workbooksd-release.yml
docs/: ENCRYPTED_FORMAT.md  KEK_ROTATION.md  OPERATIONS.md  RUST_RUNTIME.md  SECURITY_MODEL.md  SECURITY_MODEL_MULTIPARTY.md  SHARED_AUTH_BLUE_SKY.md  SHARED_AUTH_PROSPECTUS.md  SIGNING.md  SPEC.md  SUBSTRATE.md  SUBSTRATE_AUTHORING.md  SUBSTRATE_FORMAT_V0.md  SVELTE_SDK_DESIGN.md  SVELTE_SDK_MIGRATION.md  THREAT_MODEL.md  WORKBOOK_AS_APP.md  WORKBOOK_AUTHORING.md
examples/_shared/: chrome.js  design.css  portable.js  settings.css  settings.js
examples/candle-ops/: index.html
examples/chat-app/: index.html
examples/chat-cell/: index.html
examples/chess/: index.html  main.js  package.json  styles.css  workbook.config.mjs
examples/csv-chat/: README.md  package.json  workbook.config.mjs
examples/csv-explore/: README.md  index.html
examples/dependency-chain/: .gitignore  package.json  workbook.config.mjs
examples/document-mdx/: workbook.config.mjs
examples/earthquakes/: .gitignore  index.html  main.js  package.json  styles.css  workbook.config.mjs
examples/hello-cell/: README.md  index.html
examples/html-agent/: index.html
examples/html-workbook/: index.html
examples/hyperframes-studio/: package.json  workbook.config.mjs
examples/image-to-video/: index.html  main.js  package.json  styles.css  workbook.config.mjs
examples/notebook-agent/: package.json  workbook.config.mjs
examples/notebook-mdx/: workbook.config.mjs
examples/presentation-svelte/: package.json  workbook.config.mjs
examples/reactive-cells/: index.html  runtime-entry.ts  runtime.bundle.js
examples/regress-headclose-in-js/: package.json  workbook.config.mjs
examples/runner/: index.html
manager/: .gitignore  index.html  package.json  svelte.config.js  vite.config.js
manager/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
manager/src-tauri/capabilities/: default.json
manager/src-tauri/icons/: README.md  icon.icns
manager/src-tauri/src/: lib.rs  main.rs
site/: .gitignore  package.json  wrangler.toml
site/src/: skill  (+3 more)
(+118 files in other folders)
